# markov-decision-process

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
.gitlab/: package.yml  release.yml  version.yml
.gitlab/scripts/: version_helpers.sh
src/examples/: example_1.ipynb  example_2.ipynb  example_3.ipynb  example_4.ipynb  example_5.ipynb  matrix_smoothing.ipynb  pipeline_benchmarks.ipynb
src/examples/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/examples/catboost_info/learn/: events.out.tfevents
src/examples/catboost_info/test/: events.out.tfevents
src/markov_decision_process/: __init__.py  old.time_augmented_mdp.py  time_augmented_mdp.py  utilities.py
