[project]
name = "markov-decision-process"
version = "1.0.7"
description = "Library for solving time-augmented markov decision processes."
readme = "README.md"
authors = [
    { email = "robert.garrard@aurizn.co" }
]
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pyarrow>=19.0.1",
    "pymdptoolbox>=4.0b3",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
test = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "test/",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markov_decision_process"]